server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-33.snap
---
source: server/src/search_executor/mod.rs
description: "H.003 is the correct room, but people have problems remembering how many zeroes are in the room number"
expression: actual
info: "'H.003' should get '2910.EG.003' in 1 results # H.003 is the correct room, but people have problems remembering how many zeroes are in the room number"
---
- facet: rooms
  entries:
    - id: 2910.EG.003
      type: room
      name: "2910.EG.\u0019003\u0017 (Seminarraum)"
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.003@2910
      parsed_id: "\u0019H.003\u0017 RiWa 1 (HfP/GOV)"
    - id: 5212.EG.003
      type: room
      name: "5212.EG.\u0019003\u0017 (Post/Annahme)"
      subtext: "garching, RCM-Hauptbau"
      subtext_bold: H.0.003@5212
    - id: 5212.U1.003
      type: room
      name: "5212.U1.\u0019003\u0017 (Kälte)"
      subtext: "garching, RCM-Hauptbau"
      subtext_bold: H.-1.003@5212
    - id: 2910.01.101
      type: room
      name: 2910.01.101 (Gruppenarbeitsraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.101@2910
    - id: 2910.01.102
      type: room
      name: 2910.01.102 (Gruppenarbeitsraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.102@2910
    - id: 2910.02.202
      type: room
      name: 2910.02.202 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.202@2910
    - id: 2910.02.204
      type: room
      name: 2910.02.204 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.204@2910
    - id: 2910.02.206
      type: room
      name: 2910.02.206 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.206@2910
    - id: 2910.EG.001
      type: room
      name: 2910.EG.001 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.001@2910
    - id: 2910.EG.002
      type: room
      name: 2910.EG.002 (Seminarraum)
      subtext: "stammgelände, RiWa 1 (HfP/GOV)"
      subtext_bold: H.002@2910
  n_visible: 3
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries:
    - id: "2910"
      type: building
      name: "Richard-Wagner-Str. 1 / Haus B + Haus \u0019H\u0017, Hochschule für Politik (HfP)/ Department of Governance (GOV)"
      subtext: Gebäude
  n_visible: 1
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
