server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-34.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'MI HS 3' should get '5606.EG.011' in 1 results"
---
- facet: rooms
  entries:
    - kind: location
      id: 5606.EG.011
      type: room
      name: "5606.EG.011 (\u0019MI\u0017 \u0019Hörsaal\u0017 \u00193\u0017)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.06.011@5606
    - kind: location
      id: 5602.EG.001
      type: room
      name: "5602.EG.001 (\u0019MI\u0017 \u0019HS\u0017 1,  Friedrich L. Bauer \u0019Hörsaal\u0017)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.02.001@5602
    - kind: location
      id: 5604.EG.011
      type: room
      name: "5604.EG.011 (\u0019MI\u0017 \u0019Hörsaal\u0017 2)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.04.011@5604
    - kind: location
      id: 5602.EG.002
      type: room
      name: "5602.EG.002 (\u0019MI\u0017 \u0019Hörsaal\u0017 Regieraum)"
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: 00.02.002@5602
    - kind: location
      id: 5602.U1.001
      type: room
      name: 5602.U1.001 (Technikraum)
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: "-1.02.001@5602"
    - kind: location
      id: 5602.U1.004
      type: room
      name: 5602.U1.004 (Treppe im Freien)
      subtext: "garching, Mathe/Info (MI)"
      subtext_bold: "-1.02.004@5602"
  n_visible: 6
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries:
    - kind: location
      id: "5602"
      type: building
      name: "\u0019Hörsaal\u0017 1"
      subtext: Gebäudeteil
    - kind: location
      id: mi
      type: joined_building
      name: "Fakultät Mathematik & Informatik (FMI oder \u0019MI\u0017)"
      subtext: Gebäudekomplex
    - kind: location
      id: "5606"
      type: building
      name: Gebäudeteil 06
      subtext: Gebäudeteil
    - kind: location
      id: "5605"
      type: building
      name: Gebäudeteil 05
      subtext: Gebäudeteil
  n_visible: 4
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
