server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-37.snap
---
source: server/src/search_executor/mod.rs
description: "This is 'N-1403@0104', but 'N1403@0104' can be before this"
expression: actual
info: "'n1403' should get '0104.U1.403' in 2 results # This is 'N-1403@0104', but 'N1403@0104' can be before this"
---
- facet: rooms
  entries:
    - id: 0104.U1.403
      type: room
      name: 0104.U1.403 (Fachschaft EI (aktuell im N0128))
      subtext: "stammgelände, N4"
      subtext_bold: N-1403@0104
    - id: 0104.01.403
      type: room
      name: 0104.01.403 (Büro)
      subtext: "stammgelände, N4"
      subtext_bold: N1403@0104
    - id: 0103.U1.311
      type: room
      name: 0103.U1.311 (Praktikum/Umbau)
      subtext: "stammgelände, N3"
      subtext_bold: N-1311@0103
    - id: 0108.U1.806A
      type: room
      name: 0108.U1.806A (Experimenteller Raum)
      subtext: "stammgelände, N8"
      subtext_bold: N-1806A@0108
    - id: 0108.U1.806B
      type: room
      name: 0108.U1.806B (Experimenteller Raum)
      subtext: "stammgelände, N8"
      subtext_bold: N-1806B@0108
    - id: 0108.U1.825
      type: room
      name: 0108.U1.825 (Experimenteller Raum)
      subtext: "stammgelände, N8"
      subtext_bold: N-1825@0108
    - id: 0108.U1.825A
      type: room
      name: 0108.U1.825A (Experimenteller Raum)
      subtext: "stammgelände, N8"
      subtext_bold: N-1825A@0108
    - id: 9201.EG.005
      type: room
      name: 9201.EG.005 (Seminarraum 2)
      subtext: TUM FZ Friedrich N. Schwarz Berchtesgaden
      subtext_bold: EG-05@9201
    - id: 9201.EG.006
      type: room
      name: 9201.EG.006 (Seminarraum 1)
      subtext: TUM FZ Friedrich N. Schwarz Berchtesgaden
      subtext_bold: EG-06@9201
    - id: 5406.03.621D
      type: room
      name: 5406.03.621D (Seminarraum)
      subtext: "garching, Chemie"
      subtext_bold: 46220@5406
  n_visible: 2
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries:
    - id: "9201"
      type: building
      name: "TUM FZ Friedrich \u0019N\u0017. Schwarz Berchtesgaden"
      subtext: Gebäude
  n_visible: 1
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
