server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-40.snap
---
source: server/src/search_executor/mod.rs
description: "Regression: #1868 - POIs were silently dropped from search results"
expression: actual
info: "'Validierungsautomat' should get 'validierungsautomat-1' in 1 results # Regression: #1868 - POIs were silently dropped from search results"
---
- facet: pois
  entries:
    - kind: location
      id: validierungsautomat-1
      type: poi
      name: "\u0019Validierungsautomat\u0017 1 (Physik)"
      subtext: ""
      subtext_bold: ""
    - kind: location
      id: validierungsautomat-2
      type: poi
      name: "\u0019Validierungsautomat\u0017 2 (MW)"
      subtext: ""
      subtext_bold: ""
    - kind: location
      id: validierungsautomat-3
      type: poi
      name: "\u0019Validierungsautomat\u0017 3 (School of Life Sciences Poststelle)"
      subtext: ""
      subtext_bold: ""
    - kind: location
      id: validierungsautomat-4
      type: poi
      name: "\u0019Validierungsautomat\u0017 4 (Zentralgelände)"
      subtext: ""
      subtext_bold: ""
    - kind: location
      id: validierungsautomat-5
      type: poi
      name: "\u0019Validierungsautomat\u0017 5 (MI)"
      subtext: ""
      subtext_bold: ""
  n_visible: 5
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: sites
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
