server/src/search_executor/snapshots/navigatum_server__search_executor__test__good_queries-5.snap
---
source: server/src/search_executor/mod.rs
description: ""
expression: actual
info: "'interims' should get 'garching-interims' in 1 results"
---
- facet: sites
  entries:
    - id: garching-interims
      type: area
      name: "\u0019Interimshörsäle\u0017"
      subtext: Gebiet / Gruppe von Gebäuden
  n_visible: 1
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: buildings
  entries:
    - id: "5417"
      type: building
      name: "\u0019Interims\u0017 COS / \u0019Interims\u0017 NAT"
      subtext: Gebäude
    - id: "5539"
      type: building
      name: "\u0019Interims\u0017-Tentomax MW"
      subtext: Gebäude
    - id: "5620"
      type: building
      name: "\u0019Interims\u0017-Audimax"
      subtext: Gebäude
    - id: "5416"
      type: building
      name: "\u0019Interimshörsäle\u0017 II, Jürgen Manchot-Hörsaalgebäude"
      subtext: Gebäude
  n_visible: 4
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: rooms
  entries:
    - id: 5416.01.003
      type: room
      name: "5416.01.003 (Hörsaal 2,  \"\u0019Interims\u0017 II\")"
      subtext: "garching, Interims II"
      subtext_bold: 003@5416
    - id: 5416.01.004
      type: room
      name: "5416.01.004 (Hörsaal 1,  Jürgen-Manchot \"\u0019Interims\u0017 II\")"
      subtext: "garching, Interims II"
      subtext_bold: 004@5416
    - id: 5620.01.101
      type: room
      name: "5620.01.101 (Hörsaal 1,  \"\u0019Interims\u0017 I\")"
      subtext: "garching, Interims-Audimax"
      subtext_bold: 101@5620
    - id: 5620.01.102
      type: room
      name: "5620.01.102 (Hörsaal 2,  \"\u0019Interims\u0017 I\")"
      subtext: "garching, Interims-Audimax"
      subtext_bold: 102@5620
    - id: 5539.EG.001A
      type: room
      name: "5539.EG.001A (Hörsaal 1A,  \"Zelt\")"
      subtext: "garching, Interims III"
      subtext_bold: 0.001A@5539
  n_visible: 5
  estimatedTotalHits: "[estimatedTotalHits]"
- facet: pois
  entries: []
  n_visible: 0
  estimatedTotalHits: "[estimatedTotalHits]"
